tests/ui/rfcs/rfc-2632-const-trait-impl/const-drop.stock.stderr
error: `~const` is not allowed here
  --> $DIR/const-drop.rs:67:38
   |
LL |     pub struct ConstDropWithBound<T: ~const SomeTrait>(pub core::marker::PhantomData<T>);
   |                                      ^^^^^^^^^^^^^^^^
   |
   = note: this item cannot have `~const` trait bounds

error: aborting due to previous error

